# knpanel

./: CMakeLists.txt  applet.cpp  applet.h  container.cpp  container.h  event.cpp  event.h  knpanel.cpp  knpanel.h  knpanel_export.h  knpanelapplet.desktop  main.cpp  nlayout.cpp  nlayout.h  plate.cpp  plate.h  tooltip.cpp  tooltip.h
applets/: CMakeLists.txt  knpanel_applet_dclock.cpp  knpanel_applet_dclock.desktop  knpanel_applet_dclock.h  knpanel_applet_kbutton.cpp  knpanel_applet_kbutton.desktop  knpanel_applet_kbutton.h  knpanel_applet_mnpager.cpp  knpanel_applet_mnpager.desktop  knpanel_applet_mnpager.h  knpanel_applet_sctasks.cpp  knpanel_applet_sctasks.desktop  knpanel_applet_sctasks.h  knpanel_applet_sdhbutton.cpp  knpanel_applet_sdhbutton.desktop  knpanel_applet_sdhbutton.h  knpanel_applet_sstray.cpp  knpanel_applet_sstray.desktop  knpanel_applet_sstray.h  knpanel_applet_trash.cpp  knpanel_applet_trash.desktop  knpanel_applet_trash.h
